<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C4574"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/name_login"
        android:layout_width="273dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/princess_sofia"
        android:text="@string/welcome_title"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_login"
        android:layout_width="250dp"
        android:layout_height="62dp"
        android:text="@string/welcome_login"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chgpwPP" />

    <ImageView
        android:id="@+id/chgpwPP"
        android:layout_width="289dp"
        android:layout_height="274dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_login"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/loginUsername"
        android:layout_width="324dp"
        android:layout_height="50dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="Username"
        android:inputType="textEmailAddress"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_login" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="324dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginUsername" />

    <Button
        android:id="@+id/login2button"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#67ADFF"
        android:text="Login"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPassword" />

    <TextView
        android:id="@+id/tosignup_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tosignup_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/signupRedirect"
        app:layout_constraintHorizontal_bias="0.811"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login2button" />

    <TextView
        android:id="@+id/forgotpwredirect"
        android:layout_width="103dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="navigateToSignupActivity"
        android:text="Click here"
        android:textColor="#007bff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toEndOf="@+id/forgetpwtext"
        app:layout_constraintTop_toBottomOf="@+id/signupRedirect" />

    <TextView
        android:id="@+id/signupRedirect"
        android:layout_width="99dp"
        android:layout_height="33dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="76dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="navigateToSignupActivity"
        android:text="Signup now"
        android:textColor="#007bff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login2button" />

    <TextView
        android:id="@+id/forgetpwtext"
        android:layout_width="126dp"
        android:layout_height="20dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="28dp"
        android:text="Forgot Password?"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tosignup_text2" />

</androidx.constraintlayout.widget.ConstraintLayout>